fix(styles,docs): link styles & breadcrumb overflow item (#4120)

--- a/packages/styles/src/mixins/_mixins.scss
+++ b/packages/styles/src/mixins/_mixins.scss
@@ -195,6 +195,7 @@
   align-items: center;
   transition: all $fd-animation-speed ease-in;
   line-height: inherit;
+  padding: 0 0.0625rem;
 
   @include fd-link-underline();
 
